[gd_scene load_steps=15 format=2]

[ext_resource path="res://scripts/ColorPicker.gd" type="Script" id=1]
[ext_resource path="res://assets/ui/bg.png" type="Texture" id=2]
[ext_resource path="res://scripts/Focus.gd" type="Script" id=3]
[ext_resource path="res://assets/ui/select.png" type="Texture" id=4]
[ext_resource path="res://resource/my_theme.tres" type="Theme" id=5]
[ext_resource path="res://scripts/Label1.gd" type="Script" id=6]
[ext_resource path="res://scripts/shader/glow.shader" type="Shader" id=7]
[ext_resource path="res://scripts/Main.gd" type="Script" id=8]
[ext_resource path="res://assets/ui/cursor.png" type="Texture" id=9]
[ext_resource path="res://scripts/MyCanvas.gd" type="Script" id=10]

[sub_resource type="GDScript" id=1]
script/source = "extends Label


# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta):
#	pass
"

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 7 )
shader_param/radius = 3.877
shader_param/amount = 0.155

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 7 )
shader_param/radius = 0.926584
shader_param/amount = 0.0741267

[sub_resource type="Animation" id=4]
resource_name = "cursor_flashing"
length = 1.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Cursor:material:shader_param/radius")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.1 ),
"transitions": PoolRealArray( 0.4, 1.8, 1, 1 ),
"update": 0,
"values": [ 0.0, 5.0, 0.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Cursor:material:shader_param/amount")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.1 ),
"transitions": PoolRealArray( 0.4, 1.8, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.4, 0.0, 0.0 ]
}

[node name="Main" type="Node2D"]
script = ExtResource( 8 )

[node name="GUI" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="GUI"]
anchor_right = 1.0
margin_bottom = 32.0
theme = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="GUI"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuBar" type="HBoxContainer" parent="GUI/VBoxContainer2"]
margin_right = 1024.0
margin_bottom = 29.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="File" type="MenuButton" parent="GUI/VBoxContainer2/MenuBar"]
margin_right = 37.0
margin_bottom = 29.0
text = "File"
items = [ "New File", null, 0, false, false, 0, 0, null, "", false, "Save File", null, 0, false, false, 1, 0, null, "", false, "Exit", null, 0, false, false, 2, 0, null, "", false ]

[node name="Help" type="MenuButton" parent="GUI/VBoxContainer2/MenuBar"]
margin_left = 41.0
margin_right = 86.0
margin_bottom = 29.0
text = "Help"
items = [ "About", null, 0, false, false, 0, 0, null, "", false ]

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/VBoxContainer2"]
margin_top = 33.0
margin_right = 1024.0
margin_bottom = 95.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Line1" type="Label" parent="GUI/VBoxContainer2/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 29.0
theme = ExtResource( 5 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Line2" type="Label" parent="GUI/VBoxContainer2/VBoxContainer"]
margin_top = 33.0
margin_right = 1024.0
margin_bottom = 62.0
theme = ExtResource( 5 )
script = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorPicker" type="ColorPicker" parent="GUI"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -319.0
margin_top = -475.0
margin_bottom = 41.0
mouse_filter = 2
theme = ExtResource( 5 )
deferred_mode = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="GUI/ColorPicker"]

[node name="Bg" type="TextureRect" parent="."]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -3200.0
margin_top = -3200.0
margin_right = -1600.0
margin_bottom = -1600.0
rect_scale = Vector2( 4, 4 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="MyCanvas" type="Node2D" parent="."]
scale = Vector2( 8, 8 )
script = ExtResource( 10 )

[node name="Focus" type="Position2D" parent="."]
script = ExtResource( 3 )

[node name="Camera2D" type="Camera2D" parent="Focus"]
current = true
limit_left = -1600
limit_top = -1600
limit_right = 1600
limit_bottom = 1600
smoothing_enabled = true
smoothing_speed = 16.0

[node name="indicator" type="Sprite" parent="Focus"]
material = SubResource( 2 )
scale = Vector2( 0.125, 0.125 )
texture = ExtResource( 4 )

[node name="Tween" type="Tween" parent="Focus"]

[node name="Cursor" type="Sprite" parent="."]
modulate = Color( 0.2, 0.796078, 0.839216, 1 )
material = SubResource( 3 )
scale = Vector2( 0.062, 0.062 )
texture = ExtResource( 9 )
centered = false
offset = Vector2( -192, -192 )

[node name="Tween" type="Tween" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "cursor_flashing"
playback_speed = 0.5
anims/cursor_flashing = SubResource( 4 )
[connection signal="color_changed" from="GUI/ColorPicker" to="." method="_on_ColorPicker_color_changed"]
[connection signal="mouse_enterted_rect" from="GUI/ColorPicker" to="GUI/ColorPicker" method="_on_ColorPicker_mouse_enterted_rect"]
[connection signal="mouse_exited_rect" from="GUI/ColorPicker" to="GUI/ColorPicker" method="_on_ColorPicker_mouse_exited_rect"]
[connection signal="bitmap_changed" from="MyCanvas" to="MyCanvas" method="_on_MyCanvas_bitmap_changed"]
[connection signal="state_changed" from="Focus" to="GUI/VBoxContainer2/VBoxContainer/Line1" method="_on_Focus_state_changed"]
